--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 }
 .container {
 	width: 60%;
+	height: 900px;
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 20px;
@@ -30,7 +31,7 @@ body {
 	grid-area: 1 / 1 / 2 / 4;
 }
 .form-one {
-	width: 60%;
+	width: 70%;
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 20px;
@@ -40,7 +41,7 @@ body {
 	grid-area: 2 / 1 / 3 / 4;
 }
 .form-two {
-	width: 60%;
+	width: 70%;
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 20px;
@@ -50,7 +51,7 @@ body {
 	grid-area: 3 / 1 / 4 / 4;
 }
 .form-three {
-	width: 60%;
+	width: 70%;
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 20px;
@@ -60,7 +61,7 @@ body {
 	grid-area: 4 / 1 / 5 / 4;
 }
 .form-four {
-	width: 60%;
+	width: 70%;
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 20px;
@@ -79,23 +80,42 @@ body {
 	font-size: 16px;
 	padding: 6px;
 	right: auto;
-	margin-bottom: 60px;
+	margin-bottom: 50px;
 	display: block;
 	text-align: center;
 	cursor: pointer;
 	grid-area: 6 / 1 / 7 / 4;
 }
-.formOne-result {
-	grid-area: 7 / 1 / 7 / 2;
-	margin-bottom: 15%;
+.a-button-average-cost-equal.isActive {
+	opacity: 0;
+}
+span#resultCostTravel.formOne-result {
+	opacity: 0;
+	grid-area: 7 / 1 / 7 / 4;
+}
+span#resultCostTravel.formOne-result.isActive {
+	opacity: 1;
+	width: 40%;
+	color: yellow;
+	background-color: grey;
+	box-sizing: border-box;
+	border: 1px solid rgb(0, 0, 0);
+	border-radius: 20px;
+	font-size: 16px;
+	padding: 12px;
+	right: auto;
+	margin-bottom: 50px;
+	display: block;
 	text-align: center;
+	cursor: pointer;
+	grid-area: 6 / 1 / 7 / 4;
 }
 .header-box-right {
 	padding: 20px;
 	grid-area: 1 / 4 / 2 / 7;
 }
 .form-five {
-	width: 60%;
+	width: 70%;
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 20px;
@@ -105,7 +125,7 @@ body {
 	grid-area: 2 / 4 / 2 / 7;
 }
 .form-six {
-	width: 60%;
+	width: 70%;
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 20px;
@@ -115,7 +135,7 @@ body {
 	grid-area: 3 / 4 / 3 / 7;
 }
 .form-seven {
-	width: 60%;
+	width: 70%;
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 20px;
@@ -132,11 +152,54 @@ body {
 	border: 1px solid rgb(0, 0, 0);
 	border-radius: 20px;
 	font-size: 16px;
-	padding: 6px;
+	padding: 2px;
 	right: auto;
-	margin-bottom: 60px;
+	margin-bottom: 50px;
 	display: block;
 	text-align: center;
 	cursor: pointer;
 	grid-area: 6 / 4 / 6 / 7;
+}
+.a-button-average-combustion-equal.isActive {
+	opacity: 0;
+}
+
+span#resultAvarageCombustion.formTwo-result {
+	display: none;
+	grid-area: 7 / 4 / 7 / 7;
+}
+span#resultAvarageCombustion.formTwo-result.isActive {
+	opacity: 1;
+	width: 40%;
+	color: yellow;
+	background-color: grey;
+	box-sizing: border-box;
+	border: 1px solid rgb(0, 0, 0);
+	border-radius: 20px;
+	font-size: 14px;
+	margin-bottom: 50px;
+	display: block;
+	padding: 4px;
+	text-align: center;
+	cursor: pointer;
+	grid-area: 7 / 4 / 6 / 7;
+}
+
+span#resultCost.formThree-result {
+	display: none;
+	grid-area: 7 / 4 / 7 / 7;
+}
+span#resultCost.formThree-result.isActive {
+	opacity: 1;
+	width: 40%;
+	color: yellow;
+	box-sizing: border-box;
+	border-radius: 20px;
+	font-size: 14px;
+	margin-top: 28px;
+	margin-bottom: 50px;
+	display: block;
+	text-align: center;
+	cursor: pointer;
+	grid-area: 7/ 4 /6/ 7;
 }
